# AppDataStore

./: README.md  ReleaseNotes.md  pyproject.toml
src/appdatastore/: base.py  inifile.py  mem.py  redis.py  shared_mem.py  shared_mem.py.hold  shared_mem_item.py  typing.py
tests/: conftest.py  constants.py  test_base.py
tests/inifile/: test_inifile.py
tests/mem/: test_mem.py
tests/redis/: test_redis.py
tests/shared_mem/: test_shared_mem.py  test_shared_mem_item.py
