[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appdatastore"
version = "1.0.2"
authors = [
  { name="Jason Piszcyk", email="Jason.Piszcyk@gmail.com" },
]
description = "Application Components - Network Communications"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pytest",
  "redis",
  "appcore @ git+https://github.com/JasonPiszcyk/AppCore",
  "crypto_tools @ git+https://github.com/JasonPiszcyk/CryptoTools",
]

[project.urls]
"Homepage" = "https://github.com/JasonPiszcyk/AppDataStore"
"Bug Tracker" = "https://github.com/JasonPiszcyk/AppDataStore/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
